--- a/website/themes/hugo-book/layouts/partials/docs/inject/menu-after.html
+++ b/website/themes/hugo-book/layouts/partials/docs/inject/menu-after.html
@@ -18,7 +18,7 @@
         <span>Downloads</span>
         <ul>
             <li>
-                <a href="https://github.com/variar/klogg/releases/tag/v19.9">
+                <a href="https://github.com/brangr/klogg/releases/tag/v19.9">
                     <img src="https://img.shields.io/github/v/release/variar/klogg?label=GitHub%20Release&amp;style=for-the-badge" alt="GitHub Release">
                 </a>
             </li>
@@ -41,17 +41,17 @@
         <span>Development builds</span>
         <ul>
             <li>
-                <a href="https://github.com/variar/klogg/releases/tag/continuous-win" target="_blank">
+                <a href="https://github.com/brangr/klogg/releases/tag/continuous-win" target="_blank">
                     <i class="fab fa-windows fa-lg"></i> Windows
                 </a>
             </li>
             <li>
-                <a href="https://github.com/variar/klogg/releases/tag/continuous-linux" target="_blank">
+                <a href="https://github.com/brangr/klogg/releases/tag/continuous-linux" target="_blank">
                     <i class="fab fa-linux fa-lg"></i> Linux
                 </a>
             </li>
             <li>
-                <a href="https://github.com/variar/klogg/releases/tag/continuous-osx" target="_blank">
+                <a href="https://github.com/brangr/klogg/releases/tag/continuous-osx" target="_blank">
                     <i class="fab fa-apple fa-lg"></i> Mac
                 </a>
             </li>
@@ -60,7 +60,7 @@
 
     <hr/>
 <li>
-    <a class="github-button" href="https://github.com/variar/klogg" data-show-count="true" aria-label="Star variar/klogg on GitHub">Star</a>
+    <a class="github-button" href="https://github.com/brangr/klogg" data-show-count="true" aria-label="Star variar/klogg on GitHub">Star</a>
 </li>
 <li>
     <a href="https://paypal.me/avfilimonov"> <i class="fab fa-paypal"></i> Support development</a>
